--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#homw">Start</a></li>
-          <li><a href="destinations">Reisezile</a></li>
+          <li><a href="#home">Start</a></li>
+          <li><a href="destinations">Reiseziele</a></li>
           <li><a href="#tips">Tipps</a></li>
           <li><a href="#about">über uns</a></li>
           <li><a href="#contact">Kontakt</a></li>
