--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
       </nav>
     </header>
     <section id="home" class="hero">
+        <div id="color-mitte">
       <h2>Abenteuer beginnt hier</h2>
-      <p>
+      <p id="groesse">
         <em><strong>Tauche ein in Faszinierende Reiseziele.</strong></em>
       </p>
+      </div>
       <button class="cta-button">Reisetipps ansehen</button>
     </section>
     <section id="destinations" class="destinations-section">
