--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   </head>
   <body>
     <header>
-        <div class="logo" style="display: flex; align-items: center; gap: 15px;">
-    <img src="https://cdn-icons-png.flaticon.com/512/201/201623.png" alt="Reise-Logo"width="60"/>
-      <div>
-        <h1>Wanderlust Adventures</h1>
-        <p>Entdecke die welt mit uns!</p>
-      </div>
+      <div class="logo" style="display: flex; align-items: center; gap: 15px">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/201/201623.png"
+          alt="Reise-Logo"
+          width="60"
+        />
+        <div>
+          <h1>Wanderlust Adventures</h1>
+          <p>Entdecke die welt mit uns!</p>
         </div>
+      </div>
       <nav>
         <ul>
           <li><a href="#home">Start</a></li>
@@ -31,18 +35,25 @@
         <p id="groesse">
           <em><strong>Tauche ein in Faszinierende Reiseziele.</strong></em>
         </p>
-      
-      <a href="Reisetipps.html" target="_blank">
-      <button class="cta-button">Reisetipps ansehen</button></a>
+
+        <a href="Reisetipps.html" target="_blank">
+          <button class="cta-button">Reisetipps ansehen</button></a
+        >
       </div>
     </section>
     <section class="search-section">
-  <form class="search-form">
-    <label for="search">Reiseziel suchen:</label>
-    <input type="text" id="search" name="search" placeholder="z.B Spaniern, Türkei" required />
-    <button type="submit">Suchen</button>
-  </form>
-</section>
+      <form class="search-form">
+        <label for="search">Reiseziel suchen:</label>
+        <input
+          type="text"
+          id="search"
+          name="search"
+          placeholder="z.B Spaniern, Türkei"
+          required
+        />
+        <button type="submit">Suchen</button>
+      </form>
+    </section>
     <section id="destinations" class="destinations-section">
       <h2>Unsere Top-Reiseziele</h2>
       <div class="destinations-grid">
@@ -79,23 +90,47 @@
           </div>
         </a>
         <!--dritte Reisekarte-->
-        <a href="" target="_blank" class="card-link">
+        <a
+          href="https://en.wikipedia.org/wiki/Alhambra"
+          target="_blank"
+          class="card-link"
+        >
           <div class="destination-card">
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <img
+              src="https://www.taruk.com/fileadmin/user_upload/BLOG/Alhambra_in_Granada/HEADER_BILD/alhambra-granada-andalusien-spanien.jpg "
+              alt="spanien"
+            />
+            <h3>Spanien-alhambra</h3>
+            <p>eine der meistbesuchten Touristenattraktionen Europas</p>
           </div>
         </a>
         <!--vierte Reise karte-->
-        <a href="" target="_blank" class="card-link">
-            <div class="destination-card">
-            <img src="" alt=""/>
-            <h3></h3>
-            <p></p>
-            </div>
+        <a href="https://en.wikipedia.org/wiki/England" target="_blank" class="card-link">
+          <div class="destination-card">
+            <img
+              src="https://images.ctfassets.net/mivicpf5zews/5OoHoz0tQkwy80YO6UGKic/80c176d52d86dff9549b15aa60dd8887/London_1200x600.jpg?q=75"
+              alt="England"
+            />
+            <h3>Großbritannien</h3>
+            <p>England, vereint historische Traditionen mit moderner Kultur</p>
+          </div>
         </a>
       </div>
     </section>
+    <div>
+        <div class="pagination-container">
+    <ul class="pagination">
+        <li><a href="#" class="active">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">6</a></li>
+        <li><span class="more">...</span></li>
+        <li><a href="#" class="next">Weiter &raquo;</a></li>
+    </ul>
+</div>
+    </div>
     <section id="contact" class="contact-section">
       <h2>Kontakt Aufnehmen</h2>
       <form class="contact-form">
