--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <ul>
           <li><a href="#home">Start</a></li>
           <li><a href="destinations">Reiseziele</a></li>
-          <li><a href="#tips">Tipps</a></li>
-          <li><a href="#about">über uns</a></li>
+          <li><a href="#tipps">Tipps</a></li>
+          <li><a href="ueber-uns.html" target="_blank">über uns</a></li>
           <li><a href="#contact">Kontakt</a></li>
         </ul>
       </nav>
