--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -118,7 +118,7 @@
         <div class="about-card team-card">
           <h3>Unser Team</h3>
           <p>
-            Hinter Wanderlust Adventures stehen drei Reisepassionierte, die
+            Hinter Wanderlust Adventures stehen vier Reisepassionierte, die
             selbst als Studierende die Herausforderungen budgetfreundlicher
             Reiseplanung meistern mussten:
           </p>
